# user-analysis-2023

./: .gitattributes  .gitignore  README.md  dereference_mr_explode_test.yml  docker-compose.yml  dotenv-example  project_2.ttl
config/: dereference_a_spcol_test 1.yml  dereference_a_spcol_test.yml  dereference_a_test.yml  dereference_lwspcol_affiliations.yml  dereference_lwspcol_affiliations_sparql.yml  dereference_lwspcol_publication_resource_sparql.yml  dereference_lwspcol_publications_sparql.yml  dereference_lwspcol_resource.yml  dereference_mr_test.yml  sembench.json  sembench.yaml
configs/: dereference_fair_signposting_dataset.yml  dereference_fair_signposting_projects.yml  dereference_fair_signposting_test.yml  dereference_lwspcol_publications.yml  dereference_mr_test.yml  (+4 more)
docker/lwua-dereferencer/dereferencer-py/: debug-logconf.yml  pyproject.toml
docker/lwua-dereferencer/dereferencer-py/dereferencer/: __init__.py  __main__.py  daemon.py  derefEntity.py  dereference.py  graph.py  graphdb.py  helpers.py  schedule.py  store_util.py
docker/lwua-dereferencer/dereferencer-py/dereferencer/templates/: deref_property_path.sparql  deref_property_trajectory_via_object.sparql  deref_property_trajectory_via_subject.sparql
docker/lwua-dereferencer/dereferencer-py/tests/: test_derefEntity.py  test_dereference.py
docker/lwua-dereferencer/dereferencer-py/tests/config_files/: dereference_test_1.yml  dereference_test_3.yml  dereference_test_4.yml  not_detected_test_2.yml
docker/lwua-dereferencer/dereferencer-py/tests/config_files/nested_folder/: dereference_test_5.yml
(+156 files in other folders)
